--- a/dados/sistema/config.json
+++ b/dados/sistema/config.json
@@ -1,1 +1,1 @@
-{"titulo_site": "12 Reinos", "cor_primaria": "#d23030", "fundo_url": ""}
+{"titulo_site": "\ud83d\udc32 12 Reinos", "cor_primaria": "#d23030", "fundo_url": ""}
